# PDC

./: .gitignore  task 1  task 3  task 4  task 5  task 7
dz_1/: CMakeLists.txt  Queue.cpp  Queue.h  Tasks.cpp  Tasks.h  Thread.cpp  Thread.h  main.cpp
rk_1/: CMakeLists.txt  Inspector.cpp  Inspector.h  Storage.cpp  Storage.h  task_1.cpp  task_2.cpp
sem2/: task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp  task_6.cpp  task_7.cpp  task_8.cpp  task_9.cpp
sem2/task 10 - 11/: FileManager.cpp  FileManager.hpp  Group.cpp  Group.hpp  Person.cpp  Person.hpp  RecordBook.cpp  RecordBook.hpp  Student.cpp  Student.hpp  Teacher.cpp  Teacher.hpp  grade_check.hpp  main.cpp
sem_2/: CMakeLists.txt  task_2.cpp  task_6.cpp  task_8.cpp  task_9.cpp
sem_2/task_10_11/: FileManager.cpp  FileManager.hpp  Group.cpp  Group.hpp  Person.cpp  RecordBook.cpp  Student.hpp  Teacher.hpp  grade_check.hpp  main.cpp
sem_3/: CMakeLists.txt
sem_4/: Account.h  Bank.h  CMakeLists.txt  ParallelSum.h  task_1.cpp  task_2.cpp
task 10 - 11/: Person.hpp  RecordBook.hpp  Student.cpp  Teacher.cpp
